scenarios/uc19-network-graphs/mini-contacts/kustomize/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mini-contacts-backend
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: mini-contacts-frontend
  labels: { app: api }
spec:
  selector: { app: api }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
